--- a/client/src/css/UserDashboard.css
+++ b/client/src/css/UserDashboard.css
@@ -9,3 +9,10 @@
   align-items: center;
   flex-direction: column;
 }
+
+.post-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
