--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,9 +1,9 @@
-/* body {
-  background-image: url('/src//assets/background.png');
+body {
+  background-image: url('/src/assets/background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-} */
+}
 
 body {
   background-color: #eae8ff;
